src/objects/TR1__Fyre_VMS__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Notification_Email__c</fullName>
        <inlineHelpText>Separate Multiple Emails by &quot;;&quot;</inlineHelpText>
        <label>Notification Email Addresses</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Password__c</fullName>
        <label>Password</label>
        <length>60</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Target_Url__c</fullName>
        <label>Target Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Username__c</fullName>
        <label>Username</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__VMSClientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VMS Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>VMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__VMSType__c</fullName>
        <label>VMS Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__VMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>VMS ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Password?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__type__c</fullName>
        <description>VMS provider names</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>beeline</fullName>
                </value>
                <value>
                    <fullName>fieldglass</fullName>
                </value>
                <value>
                    <fullName>iqnavigator</fullName>
                </value>
                <value>
                    <fullName>agile1</fullName>
                </value>
                <value>
                    <fullName>evolution</fullName>
                </value>
                <value>
                    <fullName>superior</fullName>
                </value>
                <value>
                    <fullName>peoplefluent</fullName>
                </value>
                <value>
                    <fullName>staffenabler</fullName>
                </value>
                <value>
                    <fullName>wand</fullName>
                </value>
                <value>
                    <fullName>zerochaos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>VMS Credential</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__VMSType__c</columns>
        <columns>TR1__VMS_ID__c</columns>
        <columns>TR1__Notification_Email__c</columns>
        <columns>TR1__managed__c</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Target_Url__c</columns>
        <columns>TR1__type__c</columns>
        <columns>TR1__Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VMS-{0000}</displayFormat>
        <label>VMS Credential</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Credentials</pluralLabel>
    <recordTypes>
        <fullName>TR1__Fyre</fullName>
        <active>true</active>
        <description>http://getfyre.com/</description>
        <label>Fyre</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>